--- a/V.uproject
+++ b/V.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.27",
+	"EngineAssociation": "{52289EFE-4F49-38A1-9177-469AB030FBDF}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
