--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -102,14 +102,13 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="MenuLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
 +ActionMappings=(ActionName="MenuRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
 +ActionMappings=(ActionName="MenuSelect",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Enter)
-+ActionMappings=(ActionName="MenuReturn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
 +ActionMappings=(ActionName="MenuSelect",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="MenuUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Up)
 +ActionMappings=(ActionName="MenuDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Down)
 +ActionMappings=(ActionName="MenuLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Left)
 +ActionMappings=(ActionName="MenuRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Right)
 +ActionMappings=(ActionName="MenuSelect",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
-+ActionMappings=(ActionName="MenuReturn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
++ActionMappings=(ActionName="MenuReturn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=X)
 +ActionMappings=(ActionName="MenuNext",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightShoulder)
 +ActionMappings=(ActionName="MenuNext",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="MenuPrevious",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftShoulder)
@@ -132,6 +131,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="RightTBLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MiddleMouseButton)
 +ActionMappings=(ActionName="RightTBRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="MenuNext",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
++ActionMappings=(ActionName="MenuReturn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftX)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="LookUpRate",Scale=-1.000000,Key=MouseY)
